# OllamaRerank

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  api_push_changes.sh  docker-compose.yml  output.txt  pyproject.toml  sort_files.py  test_sort_files.py  tool_creator.py
.gemini/tmp/: test_rerank_api.py
artifacts/: .coverage  build_toolchain.py  copy_file.py  create_directory.py  create_folder.py  create_folder_with_specific_name.py  createfolder.py  duplicate_file.py  file_renamer.py  find_file.py  folder_creator.py  insert_file.py  insert_newline.py  make_directory.py  mkdir.py  move_file.py  rename.py  rename_file.py  search_files.py  test_build_toolchain.py  test_copy_file.py  test_create_directory.py  test_create_folder.py  test_create_folder.results.json  test_create_folder_with_specific_name.py  test_createfolder.py  test_duplicate_file.py  test_file_renamer.py  test_find_file.py  test_folder_creator.py  test_insert_file.py  test_insert_newline.py  test_insert_newline.results.json  test_make_directory.py  test_mkdir.py  test_move_file.py  test_move_file.results.json  test_rename.py  test_rename_file.py  test_rename_file.results.json  (+2 more)
machinist/: __init__.py  artifacts.py  auto_tool_creator.py  autofix.py  cli.py  config.py  explorer.py  extractor.py  llm_interface.py  parsing.py  pipeline.py  registry.py  sandbox.py  standard_tools.py  static_analysis.py  templates.py  test_skeleton.py  validation.py  validator.py  workflow.py
rerank_stack/: .gitignore  README.md  requirements.txt
tests/: test_tiebreaker.py
(+245 files in other folders)
